# nhl

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  codecov.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
.workflows/: test.yml
docs/: .gitignore  conf.py  conference.rst  division.rst  example_1.ipynb  examples.rst  franchise.rst  gametime.rst  index.rst  list.rst  location.rst  nhl.rst  player.rst  requirements.txt  statsapi.rst  team.rst  venue.rst
docs/_static/: extra.css
docs/api/: nhl.rst  nhl.statsapi.rst
docs/release-notes/: versioning.rst
nhl/: __init__.py  _api.py  _conference.py  _division.py  _event.py  _franchise.py  _gametime.py  _location.py  _official.py  _overrides.py  _player.py  _shift.py  _team.py  _url.py  _venue.py  conference.py  division.py  event.py  flyweight.py  franchise.py  game.py  gameinfo.py  gamestatus.py  gametime.py  list.py  location.py  official.py  player.py  playerstats.py  rink.py  schedule.py  season.py  shift.py  statsapi.py  team.py  venue.py
nhl/statsapi/: __init__.py  api.py  endpoints.py  fetch.py  parse.py
tests/: conftest.py  test_conference.py  test_division.py  test_event.py  test_franchise.py  test_game.py  test_gametime.py  test_list.py  test_location.py  test_official.py  test_player.py  test_shift.py  test_team.py  test_venue.py
tests/data/: 20172018_TH030415.HTM  20172018_TV030415.HTM  conferences.json  conferences_6.json  divisions.json  divisions_18.json  event.json  franchises.json  franchises_24.json  game_2017030415.json  people_8471214.json  people_8471675.json  player_8471214.json  team_15.json  teams.json  teams_15.json  venue_5094.json  venues.json  venues_5094.json
