[metadata]
name = nhl
version = 0.0.0
author = Matt Hostetter
author_email = matthostetter@gmail.com
home_page = https://github.com/mhostetter/nhl
description = A Python 3 API for retrieving and analyzing NHL game and player stats
long_description = file: README.md
license = MIT
license_file = LICENSE
keywords = nhl, hockey, sports, stats, analysis, api
classifiers =
    Development Status :: 1 - Planning,
    Intended Audience :: Developers,
    Intended Audience :: Education,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3 :: Only,

[options]
python_requires = >=3.6
packages = nhl
test_suite = tests
install_requires =
    dataclasses
    requests
    beautifulsoup4
tests_require =
    pytest
    pytest-cov
    requests-mock

[bdist_wheel]
universal = 0
