[metadata]
name = nhl
version = file: nhl/version.txt
author = Matt Hostetter
author_email = matthostetter@gmail.com
home_page = https://github.com/mhostetter/nhl
description = A Python 3 API for retrieving and analyzing NHL game and player stats
long_description = file: README.md
license = MIT
license_file = LICENSE
keywords = nhl, hockey, sports, stats, analysis, api
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers,
    Intended Audience :: Education,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3 :: Only,
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/mhostetter/nhl
    Issues = https://github.com/mhostetter/nhl/issues
    Documentation = https://nhl.readthedocs.io/en/stable/
    Discuss = https://github.com/mhostetter/nhl/discussions

[options]
packages = nhl
test_suite = tests
python_requires = >=3.6
install_requires =
    dataclasses
    requests
    beautifulsoup4
tests_require =
    pytest
    pytest-cov
    requests-mock

[bdist_wheel]
universal = 0

[pylint]
disable =
    missing-module-docstring,
    missing-function-docstring,
    line-too-long,
    too-many-lines,
    bad-whitespace,
    invalid-name,
    redefined-builtin,
    no-else-return,
    fixme,
    too-many-arguments,
    too-many-locals,
    too-many-instance-attributes,
    too-many-ancestors,
    consider-using-enumerate,
    unneeded-not,
    global-statement,
    invalid-unary-operand-type,
    eval-used,
    too-many-branches,
    protected-access
min-similarity-lines = 100
